workloads/pocket-id/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pocket-id
  namespace: pocket-id
  labels:
    app.kubernetes.io/name: pocket-id
    app.kubernetes.io/instance: pocket-id
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: pocket-id
      app.kubernetes.io/instance: pocket-id
  template:
    metadata:
      labels:
        app.kubernetes.io/name: pocket-id
        app.kubernetes.io/instance: pocket-id
    spec:
      serviceAccountName: pocket-id
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              preference:
                matchExpressions:
                  - key: workload-type
                    operator: In
                    values:
                      - general
      containers:
        - name: pocket-id
          image: "ghcr.io/pocket-id/pocket-id:v2.8.0"
          ports:
            - name: http
              containerPort: 1411
              protocol: TCP
          volumeMounts:
            - name: pocket-id-data
              mountPath: /app/data
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            failureThreshold: 3
            periodSeconds: 10
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
            failureThreshold: 3
            periodSeconds: 10
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 500m
              memory: 512Mi
      volumes:
        - name: pocket-id-data
          persistentVolumeClaim:
            claimName: pocket-id-data-pocket-id-0
