workloads/pocket-id/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pocket-id
  namespace: pocket-id
  labels:
    app.kubernetes.io/name: pocket-id
    app.kubernetes.io/instance: pocket-id
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/name: pocket-id
    app.kubernetes.io/instance: pocket-id
  type: ClusterIP
